# routers/role.go
@@ -2,7 +2,6 @@ package routers
 
 import (
 	"gin-research-sys/controllers"
-	"gin-research-sys/middlewares"
 	"github.com/gin-gonic/gin"
 )
 
@@ -11,7 +10,7 @@ func RegisterRoleRouter(r *gin.RouterGroup) {
 	controller := controllers.NewRoleController()
 
 	role := r.Group("")
-	role.Use(middlewares.JWTAuthMiddleware.MiddlewareFunc())
+	//role.Use(middlewares.JWTAuthMiddleware.MiddlewareFunc())
 	role.GET("", controller.List)
 	role.POST("", controller.Create)
 
